Fix button shadow clipping

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -134,14 +134,16 @@ h3 {
 
   .header__panel {
     margin: 0 auto;
-    max-height: 0;
-    height: fit-content;
-    transition: max-height 0.5s ease;
+    height: 0;
+    width: 100%;
+    // height: fit-content;
+    transition: height 0.5s ease;
     overflow: hidden;
   }
 
   .header__panel.open {
-    max-height: 350px;
+    height: 340px;
+
   }
 
   .header__nav,
@@ -620,6 +622,7 @@ h3 {
       width: 66%;
       margin: 0;
       justify-content: space-between;
+      overflow: visible;
     }
 
     .header__nav,
